--- a/Interviews/Mattermost/Development/package.json
+++ b/Interviews/Mattermost/Development/package.json
@@ -16,7 +16,8 @@
     "gatsby-transformer-sharp": "^2.1.21",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-intersection-observer": "^8.23.0"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
