--- a/Experiments/199 Birds/199-birds/package.json
+++ b/Experiments/199 Birds/199-birds/package.json
@@ -17,7 +17,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-intersection-observer": "^8.23.0"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
