--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/package.json
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/package.json
@@ -10,11 +10,13 @@
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sass": "^2.1.14",
     "gatsby-plugin-sharp": "^2.2.22",
     "gatsby-source-filesystem": "^2.1.22",
     "gatsby-source-sanity": "^5.0.2",
     "gatsby-transformer-remark": "^2.6.22",
     "gatsby-transformer-sharp": "^2.2.14",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
