Setting up a raycaster

--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects/package.json
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "fontfaceobserver": "^2.1.0",
+    "imagesloaded": "^4.1.4",
     "three": "^0.129.0"
   },
   "devDependencies": {
