--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects_image-wave-on-mouseover/package.json
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects_image-wave-on-mouseover/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "fontfaceobserver": "^2.1.0",
+    "gsap": "^3.7.0",
     "imagesloaded": "^4.1.4",
     "three": "^0.129.0"
   },
