--- a/Courses/Yuri Artiukh/Creating a portfolio with WebGL/002_shader-boilerplate_not-class-based/package.json
+++ b/Courses/Yuri Artiukh/Creating a portfolio with WebGL/002_shader-boilerplate_not-class-based/package.json
@@ -4,6 +4,6 @@
     "three": "^0.131.1"
   },
   "devDependencies": {
-    "@parcel/transformer-glsl": "^2.0.0-beta.2"
+    "@parcel/transformer-glsl": "^2.0.0-rc.0"
   }
 }
