--- a/Experiments/React/fetch-from-notion/package.json
+++ b/Experiments/React/fetch-from-notion/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "fetch-from-notion",
+  "name": "nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@notionhq/client": "^2.1.1",
-    "next": "12.2.4",
+    "@notionhq/client": "^2.2.1",
+    "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
   }
 }
