--- a/Experiments/React/verses/package.json
+++ b/Experiments/React/verses/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.1",
     "framer-motion": "^7.6.5",
+    "hamburger-react": "^2.5.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
