--- a/Experiments/ionic/photo-gallery/.gitignore
+++ b/Experiments/ionic/photo-gallery/.gitignore
@@ -27,3 +27,7 @@ yarn-error.log*
 
 # Optional eslint cache
 .eslintcache
+
+# You would include these folders in a real projcet but I don't want to for this learning project.
+/ios
+/android
