--- a/Experiments/ionic/photo-gallery/package.json
+++ b/Experiments/ionic/photo-gallery/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "4.6.1",
     "@capacitor/app": "4.1.1",
     "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.6.1",
     "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.1",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/status-bar": "4.1.1",
