--- a/Experiments/Ruby/rails-projects/ruby-on-rails-controllers-and-views/Gemfile
+++ b/Experiments/Ruby/rails-projects/ruby-on-rails-controllers-and-views/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "3.1.1"
+ruby "3.1.2"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.2", ">= 7.0.2.3"
@@ -10,10 +10,7 @@ gem "rails", "~> 7.0.2", ">= 7.0.2.3"
 gem "sprockets-rails"
 
 # Use mysql as the database for Active Record
-# gem "mysql2", "~> 0.5"
-
-# Use sqlite3 as the database for Active Record
-gem "sqlite3", "~> 1.4"
+gem "mysql2", "~> 0.5"
 
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
