Experimenting with Expo and Remix

--- a/Experiments/hybrid-apps/expo and remix/mobile-on-expo/app.json
+++ b/Experiments/hybrid-apps/expo and remix/mobile-on-expo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "quote-on-remix",
-    "slug": "quote-on-remix",
+    "name": "mobile-on-expo",
+    "slug": "mobile-on-expo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
