--- a/Experiments/hybrid-apps/expo and remix/mobile-on-expo/package.json
+++ b/Experiments/hybrid-apps/expo and remix/mobile-on-expo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quote-on-remix",
+  "name": "mobile-on-expo",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "~19.0.1",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-web": "~0.19.6",
     "react-native-webview": "^13.7.1"
   },
   "devDependencies": {
