--- a/Experiments/Remix/onboarding-blues-stack/package.json
+++ b/Experiments/Remix/onboarding-blues-stack/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@isaacs/express-prometheus-middleware": "^1.2.1",
     "@prisma/client": "^4.16.2",
+    "@radix-ui/themes": "^2.0.3",
     "@remix-run/css-bundle": "^2.6.0",
     "@remix-run/express": "^2.6.0",
     "@remix-run/node": "^2.6.0",
