--- a/Experiments/OnboardingApps/Onboarding v3/package.json
+++ b/Experiments/OnboardingApps/Onboarding v3/package.json
@@ -27,7 +27,7 @@
     "@tanstack/react-query": "^4.29.3",
     "@transmart/cli": "^0.2.4",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
@@ -38,7 +38,7 @@
     "react-hook-form": "^7.51.2",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.10.0",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
@@ -66,15 +66,15 @@
     "i18next-resources-for-ts": "1.3.2",
     "lint-staged": "^13.2.1",
     "postcss": "^8.4.38",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-prettier": "3",
-    "tailwindcss": "3.3.1",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3",
-    "vite": "^4.2.0",
+    "vite": "^4.5.0",
     "vite-plugin-external": "^1.2.8",
     "vite-plugin-svgr": "^2.4.0"
   }
