--- a/Experiments/OnboardingApps/Onboarding v3/package.json
+++ b/Experiments/OnboardingApps/Onboarding v3/package.json
@@ -40,7 +40,8 @@
     "react-router-dom": "^6.10.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.1",
