--- a/Experiments/OnboardingApps/Onboarding v3/package.json
+++ b/Experiments/OnboardingApps/Onboarding v3/package.json
@@ -28,6 +28,7 @@
     "@transmart/cli": "^0.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
