--- a/Experiments/UI/range-sliders/package.json
+++ b/Experiments/UI/range-sliders/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "layout_1",
+  "name": "soundboard-sliders",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "framer-motion": "^11.2.4",
-    "lucide-react": "^0.379.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "usehooks-ts": "^3.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
